2008-01-17  Johannes Schmid <jhs@gnome.org>

	* plugins/document-manager/action-callbacks.c:
	(on_editor_command_select_all_activate),
	(on_editor_command_cut_activate),
	(on_editor_command_paste_activate),
	(on_editor_command_copy_activate),
	(on_editor_command_clear_activate):
  Resupport cut/copy/paste/clear on GtkEditables when those
  have focus. (Important for shortcuts to work).

	* plugins/cvs-plugin/anjuta-cvs-plugin.glade:
	* plugins/document-manager/search-box.c: (on_search_activated):
	* plugins/gdb/plugin.c: (gdb_plugin_start_terminal):
	* plugins/patch/patch-plugin.c: (on_ok_clicked):
	* plugins/profiler/plugin.c: (profiler_get_data):
	* plugins/project-wizard/druid.c: (npw_druid_new):
	* plugins/project-wizard/install.c: (on_install_end_install_file):
	* plugins/sourceview/anjuta-editor-sourceview.glade:
	* plugins/subversion/anjuta-subversion.glade:
	* plugins/tools/anjuta-tools.glade:
	Various string fixes

2008-01-17  Naba Kumar  <naba@gnome.org>

	Patch from James Liggett:

	* plugins/subversion/subversion-add-dialog.c:
	(on_subversion_add_response):
	* plugins/subversion/subversion-copy-dialog.c:
	(on_subversion_copy_response):
	* plugins/subversion/subversion-diff-dialog.c:
	(on_subversion_diff_response):
	* plugins/subversion/subversion-merge-dialog.c:
	(on_subversion_merge_response):
	* plugins/subversion/subversion-remove-dialog.c:
	(on_subversion_remove_response):
	* plugins/subversion/subversion-switch-dialog.c:
	(on_subversion_switch_response):
	* plugins/subversion/subversion-ui-utils.c: (check_input):
	* plugins/subversion/subversion-ui-utils.h:
	* plugins/subversion/subversion-update-dialog.c:
	(on_subversion_update_response):

	If the user doesn't enter any data for path or revision fields in
	certain SVN plugin dialogs, libsvn throws assertion failures and
	kills Anjuta. To avoid this, the validity of path and revision
	input data are checked before the command gets executed.
